support event bus，components moving around.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 			}
 		}
 	</style>
+	<script type="module" src="./src/extend.js"></script>
 </head>
 
 <body class="asteroids">
@@ -196,9 +197,9 @@
 			</div>
 		</div>
 	</div>
-	<script id="_fed_an_ua_tag" type="text/javascript"
+	<!-- <script id="_fed_an_ua_tag" type="text/javascript"
 		src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=NASA&amp;subagency=EyesOnAsteroids&amp;dclink=true&amp;sp=search,s,q&amp;sdor=false&amp;exts=tif,tiff">
-	</script>
+	</script> -->
 </body>
 <footer>
 	<script>
@@ -220,7 +221,7 @@
 	<link rel="stylesheet" type="text/css" href="./src/app.css" />
 	<script src="./src/vendors.js"></script>
 	<script src="./src/config.js"></script>
-	<script type="module" src="./src/extend.js"></script>
+
 	<script src="./src/app.js"></script>
 
 </footer>
